--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
