--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test:e2e": "cypress open",
+    "test:e2e:run": "cypress run",
     "lint": "next lint"
   },
   "dependencies": {
@@ -21,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cypress": "^13.15.2",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
