--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "md5": "^2.3.0",
     "next": "15.0.2",
     "react": "^18.3.1",
@@ -20,6 +21,7 @@
     "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
+    "@types/md5": "^2.3.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
